@@ -14,8 +14,8 @@ import oogasalad.GamePlayer.GamePiece.PieceData;
 import oogasalad.GamePlayer.Board.TurnCriteria.Linear;
 import oogasalad.GamePlayer.EngineExceptions.InvalidMoveException;
 import oogasalad.GamePlayer.EngineExceptions.OutsideOfBoardException;
-import oogasalad.GamePlayer.GameClauses.CheckValidator;
-import oogasalad.GamePlayer.GameClauses.CheckmateValidator;
+import oogasalad.GamePlayer.ValidStateChecker.Check;
+import oogasalad.GamePlayer.Board.EndConditions.Checkmate;
 import oogasalad.GamePlayer.Movement.Coordinate;
 import oogasalad.GamePlayer.Movement.Movement;
 import org.apache.logging.log4j.LogManager;
@@ -54,15 +54,13 @@ public class CheckmateTests {
   Piece makeKing(int row, int col, int team) {
     return new Piece(new PieceData(new Coordinate(row, col),
         "king" + team, 0, team, true,
-        List.of(new Movement(List.of(new Coordinate(1, 0)), false)),
-        Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), ""), board);
+        List.of(new Movement(List.of(new Coordinate(1, 0)), false)), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), ""));
   }
 
   Piece makePawn(int row, int col, int team) {
     return new Piece(new PieceData(new Coordinate(row, col),
         "pawn" + team, 0, team, false,
-        List.of(new Movement(List.of(new Coordinate(-1, 0)), false)),
-        Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), ""), board);
+        List.of(new Movement(List.of(new Coordinate(-1, 0)), false)), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), ""));
   }
 
   Piece makeRook(int row, int col, int team) {
@@ -75,8 +73,7 @@ public class CheckmateTests {
 
     return new Piece(new PieceData(new Coordinate(row, col),
         "rook" + team, 0, team, false,
-        List.of(rookMovement),
-        Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), ""), board);
+        List.of(rookMovement), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), ""));
   }
 
   /**
@@ -93,7 +90,7 @@ public class CheckmateTests {
 
     board.setPieces(pieces);
     LOG.debug(board);
-    assertTrue(CheckValidator.isInCheck(board, TEAM_1));
+    assertTrue(new Check().isValid(board, TEAM_1));
 //    assertTrue(CheckmateValidator.isInMate(board, TEAM_1));
   }
 
@@ -108,7 +105,7 @@ public class CheckmateTests {
     board.setPieces(pieces);
     LOG.debug(board);
 
-    assertTrue(CheckmateValidator.isInMate(board, TEAM_2));
+    assertTrue(Checkmate.isInMate(board, TEAM_2));
   }
 
   @Test
@@ -118,7 +115,7 @@ public class CheckmateTests {
         makePawn(3, 0, TEAM_2)));
 
     board.setPieces(pieces);
-    assertFalse(CheckmateValidator.isInMate(board, TEAM_1));
+    assertFalse(Checkmate.isInMate(board, TEAM_1));
   }
 
   @Test
@@ -131,7 +128,7 @@ public class CheckmateTests {
     ));
 
     board.setPieces(pieces);
-    assertFalse(CheckmateValidator.isInMate(board, TEAM_1));
+    assertFalse(Checkmate.isInMate(board, TEAM_1));
   }
 
   @Test
@@ -143,13 +140,13 @@ public class CheckmateTests {
         rook2));
     board.setPieces(pieces);
     LOG.debug(board);
-    assertFalse(CheckmateValidator.isInMate(board, TEAM_1));
+    assertFalse(Checkmate.isInMate(board, TEAM_1));
 
     //Some Movement
-    rook1.move(board.getTile(new Coordinate(1, 0)));
-    rook2.move(board.getTile(new Coordinate(1, 0)));
-    king1.move(board.getTile(new Coordinate(1, 0)));
+    rook1.move(board.getTile(new Coordinate(1, 0)), board);
+    rook2.move(board.getTile(new Coordinate(1, 0)), board);
+    king1.move(board.getTile(new Coordinate(1, 0)), board);
 
-    assertTrue(CheckmateValidator.isInMate(board, TEAM_2));
+    assertTrue(Checkmate.isInMate(board, TEAM_2));
   }
 }
